
1)  Support ipset lists.

2)  Use conntrack in 'shorewall connections'

3)  Clean up Shorewall6 error messages when running on a kernel <
    2.6.24

4)  Clean up ipset related error reporting out of validate_net().

5)  Dramatically reduce the amount of CPU time spent in optimization.

6)  Add 'scfilter' script.

7)  Fix -lite init scripts.

8)  Clamp VERBOSITY to valid range.

Changes in Shorewall 4.4.13

1)  Allow zone lists in rules SOURCE and DEST.

2)  Fix exclusion in the blacklist file.

3)  Correct several old exclusion bugs.

4)  Fix exclusion with CONTINUE/NONAT/ACCEPT+

5)  Re-implement optional interface handling.

6)  Add secmark config file.

7)  Split in and out blacklisting.

8)  Correct handling of [{src|dst},...] in ipset invocation

9)  Correct SAME.

10) TC Enhancements:

    <burst> in IN-BANDWIDTH columns.
    OUT-BANDWIDTH column in tcinterfaces.

11) Create dynamic zone ipsets on 'start'.

12) Remove new blacklisting implementation.

13) Implement an alternative blacklisting scheme.

14) Use '-m state' for UNTRACKED.

15) Clear raw table on 'clear'

16) Correct port-range check in tcfilters.

17) Disallow '*' in interface names.

Changes in Shorewall 4.4.12

1)  Fix IPv6 shorecap program.

2)  Eradicate incorrect IPv6 Multicast Network

3)  Add ADD/DEL support.

4)  Allow :random to work with REDIRECT

5)  Add per-ip log rate limiting.

6)  Use new hashlimit match syntax if available.

7)  Add Universal sample.

8)  Add COMPLETE option.

9)  Make ICMP a synonym for IPV6-ICMP in ipv6 configs.

10) Support new set match syntax.

11) Blacklisting by DEST IP.

12) Fix duplicate rule generation with 'any'.

13) Fix port range editing problem.

14) Display the .conf file directory in response to the status command.

15)  Correct AUTOMAKE

Changes in Shorewall 4.4.11

1)  Apply patch from Gabriel.

2)  Fix IPSET match detection when a pathname is specified for IPSET.

3)  Fix start priority of shorewall-init on Debian
