@@ -126,17 +126,11 @@ ADMINISABSENTMINDED=Yes
 
 BLACKLISTNEWONLY=Yes
 
-DELAYBLACKLISTLOAD=No
-
 MODULE_SUFFIX=ko
 
 DISABLE_IPV6=No
 
-BRIDGING=No
-
 DYNAMIC_ZONES=No
-
-PKTTYPE=Yes
 
 NULL_ROUTE_RFC1918=No
 
