@@ -137,13 +137,9 @@ ADMINISABSENTMINDED=Yes
 
 BLACKLISTNEWONLY=Yes
 
-DELAYBLACKLISTLOAD=No
-
 MODULE_SUFFIX=ko
 
 DISABLE_IPV6=No
-
-BRIDGING=No
 
 DYNAMIC_ZONES=No
 
@@ -164,8 +160,6 @@ FASTACCEPT=No
 IMPLICIT_CONTINUE=No
 
 HIGH_ROUTE_MARKS=No
-
-USE_ACTIONS=Yes
 
 OPTIMIZE=1
 
