@@ -559,8 +559,9 @@ rc-update add bridge boot
 
     <para>In /etc/shorewall/zones, BP zones are specified using the <emphasis
     role="bold">bport</emphasis> (or <emphasis role="bold">bport4</emphasis>)
-    keyword. Shorewall 4.4 or later requires that BRIDGING=No in
-    <filename>shorewall.conf</filename>.</para>
+    keyword. If your version of <filename>shorewall.conf</filename> contains
+    the <emphasis role="bold">BRIDGING</emphasis> option, it must be set to
+    <emphasis role="bold">No</emphasis>.</para>
 
     <para>In the scenario pictured above, there would probably be two BP zones
     defined -- one for the Internet and one for the local LAN so in
