@@ -17,6 +17,8 @@ Changes in Shorewall 4.4.14
 
 8)  Clamp VERBOSITY to valid range.
 
+9)  Delete obsolete options from shorewall.conf.
+
 Changes in Shorewall 4.4.13
 
 1)  Allow zone lists in rules SOURCE and DEST.
